# rust-skeleton

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
src/: app.rs  lib.rs  main.rs
src/config/: env.rs  error.rs  logger.rs  mod.rs
src/plugins/: cors.rs  healthcheck.rs  mod.rs  swagger.rs  validation.rs
src/v1/modules/user/: controller.rs  dto.rs  middleware.rs  mod.rs  routes.rs  schema.rs  service.rs
tests/: integration.rs
tests/common/: mod.rs
tests/config/: env_test.rs  error_test.rs  logger_test.rs  mod.rs
tests/plugins/: cors_test.rs  healthcheck_test.rs  mod.rs  swagger_test.rs  validation_test.rs
tests/v1/modules/user/: controller_test.rs  dto_test.rs  middleware_test.rs  mod.rs  service_test.rs
