[package]
name = "rust-skeleton"
version = "2.0.0"
edition = "2021"
authors = ["Luiz Ricardo Santos <luizr726@gmail.com>"]
license = "MIT"
description = "Generic software architecture framework in Rust using Axum, designed to provide a flexible and reusable foundation for application development."
repository = "https://github.com/lurickardo/rust-skeleton"
readme = "README.md"

[lib]
name = "rust_skeleton"
path = "src/lib.rs"

[[bin]]
name = "rust-skeleton"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
chrono = { version = "0.4", features = ["serde"] }
http = "1"
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
mockall = "0.12"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
